XMLExper/m12/m12_318_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘const tinyxml2::XMLElement* tinyxml2::XMLNode::NextSiblingElement(const char*) const’:
tinyxml2.cpp:1063:86: error: cannot dynamic_cast ‘node’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLUnknown*’ (conversion casts away constness)
 1063 |     for( const XMLNode* node = _next; /*PCI*/dynamic_cast<tinyxml2::XMLUnknown*>(node); node = node->_next ) {
      |                                                                                      ^
diff: tinyxml2.o: No such file or directory
